Fix T37867: scroll bar in text editor shows the wrong mouse cursor.

Patch by chipgw.